--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet" href="dist/vendor.css">
+    <link rel="stylesheet" href="vendor.css">
 </head>
 <body>
     <div id="app"></div>
 </body>
-<script src="dist/vendor.bundle.js"></script>
-<script src="dist/index.js"></script>
+<script src="vendor.bundle.js"></script>
+<script src="index.js"></script>
 </html>
